Removed fixed navbar
Cause issues by having other sections overlap the navbar so I'll go back and implement it correctly later. Also I increased the height from 50px to 70px for the navbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,11 +24,11 @@ header a {
 header {
   padding: 0 20px;
   background-color: #565759;
-  height: 50px;
+  height: 70px;
   display: flex;
   justify-content: space-between;
-  position: fixed;
   width: 100%;
+  overflow: hidden;
 }
 
 #brand {
@@ -386,6 +386,7 @@ header nav {
     display: flex;
     justify-content: center;
     text-align: center;
+    background-color: #565759;
   }
 
   .fa-brands{
